clang-ir/tests/snapshots/snapshot_fixtures__stdlib__math__remainder_remquo.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/math/remainder_remquo.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[11] = ConstArray { ty: Array { element_type: Named("s8i"), size: 11 }, elts: Str("%.6f %.6f\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[17] = ConstArray { ty: Array { element_type: Named("s8i"), size: 17 }, elts: Str("%.6f %d %.6f %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn remainder(%arg0: double, %arg1: double) -> double [external, c, nothrow];
fn remquo(%arg0: double, %arg1: double, %arg2: s32i*) -> double [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "q1", align 4
        %2 = alloca s32i, "q2", align 4
        %3 = alloca double, "a", align 8
        %4 = alloca double, "b", align 8
        %5 = alloca double, "c", align 8
        %6 = const 0 : s32i
        store %6, %0
        %7 = const 0 : s32i
        store %7, %1, align 4
        %8 = const 0 : s32i
        store %8, %2, align 4
        %9 = const 1.750000e+01 : double
        store %9, %3, align 8
        %10 = const 4.000000e+00 : double
        store %10, %4, align 8
        %11 = const -1.750000e+01 : double
        store %11, %5, align 8
        %12 = get_global @printf : (s8i*, ...) -> s32i*
        %13 = get_global @.str : s8i[11]*
        %14 = cast(array_to_ptrdecay) %13 : s8i*
        %15 = get_global @remainder : (double, double) -> double*
        %16 = load %3 : double, align 8
        %17 = load %4 : double, align 8
        %18 = call @remainder(%16, %17) : double [all]
        %19 = get_global @remainder : (double, double) -> double*
        %20 = load %5 : double, align 8
        %21 = load %4 : double, align 8
        %22 = call @remainder(%20, %21) : double [all]
        %23 = call @printf(%14, %18, %22) : s32i [all]
        %24 = get_global @printf : (s8i*, ...) -> s32i*
        %25 = get_global @.str.1 : s8i[17]*
        %26 = cast(array_to_ptrdecay) %25 : s8i*
        %27 = get_global @remquo : (double, double, s32i*) -> double*
        %28 = load %3 : double, align 8
        %29 = load %4 : double, align 8
        %30 = call @remquo(%28, %29, %1) : double [all]
        %31 = load %1 : s32i, align 4
        %32 = get_global @remquo : (double, double, s32i*) -> double*
        %33 = load %5 : double, align 8
        %34 = load %4 : double, align 8
        %35 = call @remquo(%33, %34, %2) : double [all]
        %36 = load %2 : s32i, align 4
        %37 = call @printf(%26, %30, %31, %35, %36) : s32i [all]
        %38 = const 0 : s32i
        store %38, %0
        %39 = load %0 : s32i
        return %39
}
