clang-ir/tests/snapshots/snapshot_fixtures__stdlib__math__rounding_minmax.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/math/rounding_minmax.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[21] = "%.6f %.6f %.6f %.6f\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[11] = "%.6f %.6f\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn fdim(%arg0: double, %arg1: double) -> double [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca double, "x", align 8
    %2 = alloca double, "y", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 2.300000e+00 : double
    store %4, %1, align 8
    %5 = const -2.700000e+00 : double
    store %5, %2, align 8
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[21]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = load %1 : double, align 8
    %10 = nearbyint %9 : double
    %11 = load %2 : double, align 8
    %12 = rint %11 : double
    %13 = load %1 : double, align 8
    %14 = load %2 : double, align 8
    %15 = fminnum %13, %14 : double
    %16 = load %1 : double, align 8
    %17 = load %2 : double, align 8
    %18 = fmaxnum %16, %17 : double
    %19 = call @printf(%8, %10, %12, %15, %18) : s32i [all]
    %20 = get_global @printf : ((s8i*, ...) -> s32i)*
    %21 = get_global @.str.1 : s8i[11]*
    %22 = cast(array_to_ptrdecay) %21 : s8i*
    %23 = get_global @fdim : ((double, double) -> double)*
    %24 = load %1 : double, align 8
    %25 = load %2 : double, align 8
    %26 = call @fdim(%24, %25) : double [all]
    %27 = get_global @fdim : ((double, double) -> double)*
    %28 = load %2 : double, align 8
    %29 = load %1 : double, align 8
    %30 = call @fdim(%28, %29) : double [all]
    %31 = call @printf(%22, %26, %30) : s32i [all]
    %32 = const 0 : s32i
    store %32, %0
    %33 = load %0 : s32i
    return %33
}
