clang-ir/tests/snapshots/snapshot_fixtures__stdlib__math__scale_logb.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/math/scale_logb.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[11] = "%.6f %.6f\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[14] = "%d %.6f %.6f\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn ldexp(%arg0: double, %arg1: s32i) -> double [external, c, nothrow];
fn scalbn(%arg0: double, %arg1: s32i) -> double [external, c, nothrow];
fn ilogb(%arg0: double) -> s32i [external, c, nothrow];
fn logb(%arg0: double) -> double [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca double, "x", align 8
    %2 = alloca double, "y", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 1.500000e+00 : double
    store %4, %1, align 8
    %5 = const 8.000000e+00 : double
    store %5, %2, align 8
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[11]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = get_global @ldexp : ((double, s32i) -> double)*
    %10 = load %1 : double, align 8
    %11 = const 4 : s32i
    %12 = call @ldexp(%10, %11) : double [all]
    %13 = get_global @scalbn : ((double, s32i) -> double)*
    %14 = load %1 : double, align 8
    %15 = const -2 : s32i
    %16 = call @scalbn(%14, %15) : double [all]
    %17 = call @printf(%8, %12, %16) : s32i [all]
    %18 = get_global @printf : ((s8i*, ...) -> s32i)*
    %19 = get_global @.str.1 : s8i[14]*
    %20 = cast(array_to_ptrdecay) %19 : s8i*
    %21 = get_global @ilogb : ((double) -> s32i)*
    %22 = load %2 : double, align 8
    %23 = call @ilogb(%22) : s32i [all]
    %24 = get_global @logb : ((double) -> double)*
    %25 = load %2 : double, align 8
    %26 = call @logb(%25) : double [all]
    %27 = get_global @logb : ((double) -> double)*
    %28 = const 1.250000e-01 : double
    %29 = call @logb(%28) : double [all]
    %30 = call @printf(%20, %23, %26, %29) : s32i [all]
    %31 = const 0 : s32i
    store %31, %0
    %32 = load %0 : s32i
    return %32
}
